[gd_scene load_steps=5 format=3 uid="uid://00d454c7f02u"]

[ext_resource type="Script" path="res://GUI/GUICarpets.gd" id="1_o1fes"]
[ext_resource type="PackedScene" uid="uid://bu6hf6hxgvt05" path="res://screenshots/CarpetScr.tscn" id="2_l1y2f"]
[ext_resource type="PackedScene" uid="uid://cnbnf33hrtpop" path="res://GUI/CarpetSelection.tscn" id="3_x14br"]
[ext_resource type="PackedScene" uid="uid://qtx3jibwwyey" path="res://sequences/CarpetSeq.tscn" id="4_mumtj"]

[node name="Screen" type="MarginContainer"]
offset_right = 1021.0
offset_bottom = 384.0

[node name="GUI" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 100
script = ExtResource("1_o1fes")

[node name="CarpetScr" parent="GUI" instance=ExtResource("2_l1y2f")]
layout_mode = 2

[node name="Options" type="VBoxContainer" parent="GUI"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Panel" type="Label" parent="GUI/Options"]
layout_mode = 2
size_flags_vertical = 3
text = "Sierpinski Carpets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AccuracyButton" type="Button" parent="GUI/Options"]
layout_mode = 2
text = "improve accuracy"

[node name="AddLineButton" type="Button" parent="GUI/Options"]
layout_mode = 2
text = "add line"

[node name="DelLineButton" type="Button" parent="GUI/Options"]
layout_mode = 2
text = "delete line"

[node name="Label" type="Label" parent="GUI/Options"]
layout_mode = 2
text = "current carpet:"
horizontal_alignment = 1

[node name="CarpetSelection" parent="GUI/Options" instance=ExtResource("3_x14br")]
layout_mode = 2

[node name="ResetButton" type="Button" parent="GUI/Options"]
layout_mode = 2
text = "reset"

[node name="BoxDimLabel" type="Label" parent="GUI/Options"]
layout_mode = 2
size_flags_vertical = 10
text = "current Box dimension:"
vertical_alignment = 1

[node name="BoxDim" type="Label" parent="GUI/Options"]
layout_mode = 2
size_flags_vertical = 8
text = "ln3/ln2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CarpetSeqBox" type="VBoxContainer" parent="GUI"]
layout_mode = 2

[node name="CarpetSeq" parent="GUI/CarpetSeqBox" instance=ExtResource("4_mumtj")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="GUI/CarpetSeqBox"]
layout_mode = 2
text = "end result"
horizontal_alignment = 2
autowrap_mode = 3

[connection signal="pressed" from="GUI/Options/AccuracyButton" to="GUI" method="_on_button_pressed"]
[connection signal="pressed" from="GUI/Options/AddLineButton" to="GUI" method="_new_line_pressed"]
[connection signal="pressed" from="GUI/Options/DelLineButton" to="GUI" method="_del_line_pressed"]
[connection signal="new_carpet" from="GUI/Options/CarpetSelection" to="GUI" method="_on_carpet_selection_new_carpet"]
[connection signal="pressed" from="GUI/Options/ResetButton" to="GUI" method="_on_reset_pressed"]
